HW3 correction added

--- a/ThirdHW3/CMakeLists.txt
+++ b/ThirdHW3/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.5)
 
-project(ThirdHW3 VERSION 0.1 LANGUAGES CXX)
+project(thirdHWDialogWindow VERSION 0.1 LANGUAGES CXX)
 
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
@@ -17,40 +17,44 @@ set(PROJECT_SOURCES
         mainwindow.cpp
         mainwindow.h
         mainwindow.ui
+        dialog.cpp
+        dialog.h
+        dialog.ui
 )
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
-    qt_add_executable(ThirdHW3
+    qt_add_executable(thirdHWDialogWindow
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
+        dialog.h dialog.cpp dialog.ui
     )
 # Define target properties for Android with Qt 6 as:
-#    set_property(TARGET ThirdHW3 APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
+#    set_property(TARGET thirdHWDialogWindow APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
 #                 ${CMAKE_CURRENT_SOURCE_DIR}/android)
 # For more information, see https://doc.qt.io/qt-6/qt-add-executable.html#target-creation
 else()
     if(ANDROID)
-        add_library(ThirdHW3 SHARED
+        add_library(thirdHWDialogWindow SHARED
             ${PROJECT_SOURCES}
         )
 # Define properties for Android with Qt 5 after find_package() calls as:
 #    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
     else()
-        add_executable(ThirdHW3
+        add_executable(thirdHWDialogWindow
             ${PROJECT_SOURCES}
         )
     endif()
 endif()
 
-target_link_libraries(ThirdHW3 PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+target_link_libraries(thirdHWDialogWindow PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
 # If you are developing for iOS or macOS you should consider setting an
 # explicit, fixed bundle identifier manually though.
 if(${QT_VERSION} VERSION_LESS 6.1.0)
-  set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.ThirdHW3)
+  set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.thirdHWDialogWindow)
 endif()
-set_target_properties(ThirdHW3 PROPERTIES
+set_target_properties(thirdHWDialogWindow PROPERTIES
     ${BUNDLE_ID_OPTION}
     MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
     MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
@@ -59,12 +63,12 @@ set_target_properties(ThirdHW3 PROPERTIES
 )
 
 include(GNUInstallDirs)
-install(TARGETS ThirdHW3
+install(TARGETS thirdHWDialogWindow
     BUNDLE DESTINATION .
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
 
 if(QT_VERSION_MAJOR EQUAL 6)
-    qt_finalize_executable(ThirdHW3)
+    qt_finalize_executable(thirdHWDialogWindow)
 endif()
